<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragmentContainerViewCharMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/button_a_main"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerViewNumberMain"
        app:layout_constraintEnd_toStartOf="@+id/buttonBMain"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewCharMain" />

    <Button
        android:id="@+id/buttonBMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/button_b_main"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerViewNumberMain"
        app:layout_constraintEnd_toStartOf="@+id/buttonCMain"
        app:layout_constraintStart_toEndOf="@+id/buttonAMain"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewCharMain" />

    <Button
        android:id="@+id/buttonCMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_c_main"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerViewNumberMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBMain"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewCharMain" />

    <FrameLayout
        android:id="@+id/fragmentContainerViewNumberMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button1Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAMain" />

    <Button
        android:id="@+id/button1Main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/button_1_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2Main"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewNumberMain" />

    <Button
        android:id="@+id/button2Main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/button_2_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3Main"
        app:layout_constraintStart_toEndOf="@+id/button1Main"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewNumberMain" />

    <Button
        android:id="@+id/button3Main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_3_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2Main"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewNumberMain" />
</androidx.constraintlayout.widget.ConstraintLayout>